[package]
name = "kvapp"
version = "1.2.0"
authors = ["jgarzik"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
actix-web = "4"
futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"
sled = "^0.28.0"
clap = "^2.33.0"
reqwest = "^0.9.20"

[[bin]]
name = "kvapp"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

