[package]
name = "kvapp"
version = "1.2.2"
authors = ["Jeff Garzik"]
edition = "2021"
description = "Simple API database service for NoSQL key/value database"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
actix-web = "^4"
env_logger = "^0.5"
bytes = "^0.4"
sled = "^0.34"
clap = { version = "4", features = ["derive"] }
reqwest = "^0.11"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "kvapp"
path = "src/main.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"

